# fantastic_canvas

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  conftest.py  environment.yml  fantastic.md  kernel.py  main.py  migrate-fantastic.sh  package-lock.json  plan.md  pyproject.toml  selftest.md  typos.toml
bundled_agents/core/: pyproject.toml  selftest.md
bundled_agents/core/tests/: test_core.py
bundled_agents/html_agent/: pyproject.toml  selftest.md
bundled_agents/html_agent/tests/: test_html_agent.py
bundled_agents/kernel_bridge/: pyproject.toml  selftest.md
bundled_agents/kernel_bridge/tests/: test_kernel_bridge.py
bundled_agents/python_runtime/: pyproject.toml  selftest.md
bundled_agents/python_runtime/tests/: test_python_runtime.py
bundled_agents/runner/local_runner/: pyproject.toml  selftest.md
bundled_agents/runner/ssh_runner/: pyproject.toml  selftest.md
bundled_agents/terminal/terminal_webapp/: pyproject.toml  selftest.md
bundled_agents/web/: app.py  pyproject.toml  template.json  tools.py
bundled_agents/web/host/: selftest.md
bundled_agents/web/skills/: web.md
bundled_agents/web/tests/: conftest.py  test_aliases.py  test_proxy.py
bundled_agents/web/web_ws/: selftest.md
bundled_agents/webapp/: pyproject.toml  selftest.md
bundled_agents/webapp/tests/: test_app.py  test_binary_protocol.py  test_proxy.py  test_state_subscribe.py  test_transport_js.py
core/: __init__.py  _install.py  _paths.py  agent.py  agent_store.py  bundles.py  bus.py  chat_run.py  cli.py  code_runner.py  conversation.py  default_shell.html  dispatch.py  engine.py  input_loop.py  instance_backend.py  process_runner.py  protocol.py  pyproject.toml  recipients.py  scheduler.py  trace.py
core/ai/: __init__.py  anthropic_provider.py  brain.py  config.py  integrated_provider.py  local_transformers_provider.py  messages.py  ollama_provider.py  provider.py  proxy_provider.py  setup.py  tool_schema.py
core/ai/providers/: anthropic_provider.py  integrated_provider.py  ollama_provider.py  openai_compat_provider.py  proxy_provider.py
core/server/: __init__.py  _broadcast_mode.py  _lifespan.py  _rest.py  _state.py  _ws.py
core/tests/: conftest.py  selftest.md  test_agent.py  test_agent_store.py  test_ai_anthropic_provider.py  test_ai_brain.py  test_ai_brain_lock.py  test_ai_brain_swap.py  test_ai_config.py  test_ai_context.py  test_ai_integrated_device.py  test_ai_integrated_provider.py  test_ai_local_transformers_provider.py  test_ai_ollama_provider.py  test_ai_openai_compat_provider.py  test_ai_recipients.py  test_bundles.py  test_chat_run.py  test_cli.py  test_code_runner.py  test_conversation.py  test_engine.py  test_input_loop.py  test_install.py  test_instance_backend.py  test_memory.py  test_new_features.py  test_paths.py  test_process_runner.py  test_scheduler.py  test_server_registry.py  test_subagents_loaded_hook.py  test_trace.py
core/tests/ai/: README.md
core/tests/test_server/: conftest.py  test_dashboard.py  (+2 more)
core/tools/: __init__.py  _agents.py  _ai.py  _bundles.py  _content.py  _conversation.py  _instance_tracking.py  _instances.py  _plugin_loader.py  _process.py  _process_handlers.py  _registry.py  _schedules.py  _server_log.py  _state.py
integration_tests/: .gitignore  README.md  conftest.py  pyproject.toml  test_bridge_python_python_ws.py  test_bridge_python_swift_ws.py  test_bridge_rust_matrix_ws.py  test_bridge_stream_python_python_ws.py  test_bridge_stream_python_swift_ws.py  test_bridge_stream_swift_python_ws.py  test_bridge_stream_swift_swift_ws.py  test_bridge_swift_python_ws.py  test_bridge_swift_swift_ws.py  test_web_rest.py
integration_tests/bridge/: test_bridge_container_to_container.py  test_bridge_python_python_ws.py  test_bridge_python_swift_ws.py  test_bridge_rust_matrix_ws.py  test_bridge_stream_python_python_ws.py  test_bridge_stream_python_swift_ws.py  test_bridge_stream_swift_python_ws.py  test_bridge_stream_swift_swift_ws.py  test_bridge_swift_python_ws.py  test_bridge_swift_swift_ws.py
integration_tests/context/: test_ai_context_strategy.py
integration_tests/decoupling/: test_decoupling_bundle_catalog.py  test_readme_contract.py  test_serve_frontend.py
integration_tests/helpers/: __init__.py  kernel_proc.py  launcher.py  seeding.py  streaming.py  ws.py
integration_tests/memory/: test_ai_memory_discovery.py  test_ai_memory_judgment.py  test_through_loader_daemon.py
integration_tests/py_ts/: README.md  _chrome.ts  _host.ts  bridge.itest.ts  bundle_revive.browser.itest.ts  canvas_terminal.browser.itest.ts  html_agent.browser.itest.ts  llm_diag.out.md  llm_e2e.browser.itest.ts  package.json  persistence.browser.itest.ts  scheduler_ai_html.browser.itest.ts  two_tree.browser.itest.ts  two_tree.itest.ts
integration_tests/relay_e2e/: README.md  conftest.py  relay_harness.py  test_relay_matrix.py  test_relay_stream.py
integration_tests/rust_ts/: README.md
integration_tests/swift_ts/: README.md
integration_tests/web/: test_shutdown_kernel.py  test_web_rest.py
python/: CLAUDE.md  LICENSE  README.md  _testkit.py  conftest.py  main.py  pyproject.toml  selftest.md
python/kernel/: __init__.py  _agent.py  _bundles.py  _env.py  _kernel.py  _modes.py  _state.py
python/tests/: test_alias.py  test_cascade_delete.py  test_children_dir.py  test_graceful_shutdown.py  test_integration.py  test_kernel.py  test_kernel_reflect_extras.py  test_kernel_repl.py  test_kernel_routing.py  test_kernel_save_load.py  test_kernel_state_stream.py  test_persistence_across_reboot.py  test_readme.py  test_system_verbs.py  test_two_tree.py
rust/: .gitignore  Cargo.toml  README.md  RELEASING.md  THIRD_PARTY_LICENSES.md  deny.toml  selftest.md
rust/scripts/: bench-coldstart.sh  build-xcframework-embedded.sh  build-xcframework-full.sh  build-xcframework.lib.sh  build-xcframework.sh  compat-python.sh  quality.sh
rust/selftest/: binary_frame_chunking.md  feature_gates.md  python_runtime_resolution.md
src/: Cargo.toml
src/cli/: Cargo.toml
src/tui/: Cargo.toml
(+1261 files in other folders)
