[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-kernel"
version = "0.1.0"
description = "Fantastic kernel — agents, send, filesystem registry. Plugin-discovered bundles via fantastic.bundles entry points."
requires-python = ">=3.11"
dependencies = [
  "fantastic-core",
  "fantastic-cli",
  "fantastic-webapp",
  "fantastic-scheduler",
  "fantastic-file",
  "fantastic-terminal-backend",
  "fantastic-terminal-webapp",
  "fantastic-ollama-backend",
  "fantastic-nvidia-nim-backend",
  "fantastic-ai-chat-webapp",
  "fantastic-canvas-backend",
  "fantastic-canvas-webapp",
  "fantastic-telemetry-pane",
  "fantastic-gl-agent",
  "fantastic-html-agent",
  "fantastic-python-runtime",
  "fantastic-kernel-bridge",
  "fantastic-ssh-runner",
  "fantastic-local-runner",
]

[project.scripts]
fantastic = "main:main_dispatch"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "kernel"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-xdist>=3.6",
  "pytest-cov>=5",
  "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
  "bundled_agents/core/tests",
  "bundled_agents/cli/tests",
  "bundled_agents/webapp/tests",
  "bundled_agents/scheduler/tests",
  "bundled_agents/file/tests",
  "bundled_agents/terminal/terminal_backend/tests",
  "bundled_agents/terminal/terminal_webapp/tests",
  "bundled_agents/ai/ollama/ollama_backend/tests",
  "bundled_agents/ai/nvidia/nvidia_nim_backend/tests",
  "bundled_agents/ai/ai_chat_webapp/tests",
  "bundled_agents/canvas/canvas_backend/tests",
  "bundled_agents/canvas/canvas_webapp/tests",
  "bundled_agents/canvas/telemetry_pane/tests",
  "bundled_agents/gl_agent/tests",
  "bundled_agents/kernel_bridge/tests",
  "bundled_agents/runner/ssh_runner/tests",
  "bundled_agents/runner/local_runner/tests",
  "bundled_agents/html_agent/tests",
  "bundled_agents/python_runtime/tests",
]
addopts = "-q"

[tool.uv.workspace]
members = [
  "bundled_agents/core",
  "bundled_agents/cli",
  "bundled_agents/webapp",
  "bundled_agents/scheduler",
  "bundled_agents/file",
  "bundled_agents/terminal/terminal_backend",
  "bundled_agents/terminal/terminal_webapp",
  "bundled_agents/ai/ollama/ollama_backend",
  "bundled_agents/ai/nvidia/nvidia_nim_backend",
  "bundled_agents/ai/ai_chat_webapp",
  "bundled_agents/canvas/canvas_backend",
  "bundled_agents/canvas/canvas_webapp",
  "bundled_agents/canvas/telemetry_pane",
  "bundled_agents/gl_agent",
  "bundled_agents/kernel_bridge",
  "bundled_agents/runner/ssh_runner",
  "bundled_agents/runner/local_runner",
  "bundled_agents/html_agent",
  "bundled_agents/python_runtime",
  "installed_agents/*",
]

[tool.uv.sources]
fantastic-core = { workspace = true }
fantastic-cli = { workspace = true }
fantastic-webapp = { workspace = true }
fantastic-scheduler = { workspace = true }
fantastic-file = { workspace = true }
fantastic-terminal-backend = { workspace = true }
fantastic-terminal-webapp = { workspace = true }
fantastic-ollama-backend = { workspace = true }
fantastic-nvidia-nim-backend = { workspace = true }
fantastic-ai-chat-webapp = { workspace = true }
fantastic-canvas-backend = { workspace = true }
fantastic-canvas-webapp = { workspace = true }
fantastic-telemetry-pane = { workspace = true }
fantastic-gl-agent = { workspace = true }
fantastic-kernel-bridge = { workspace = true }
fantastic-ssh-runner = { workspace = true }
fantastic-local-runner = { workspace = true }
fantastic-html-agent = { workspace = true }
fantastic-python-runtime = { workspace = true }
