[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantastic"
version = "1.0.0"
description = "Modular router for the scaffolding of a tool calling statistical language models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
    "ollama>=0.4",
]

[project.optional-dependencies]
local = ["torch", "transformers>=4.45.0", "accelerate>=0.34.0"]
dev = ["watchfiles>=1.0.0", "pytest", "pytest-asyncio", "pytest-xdist"]
torch = ["torch>=2.2.0"]

[project.scripts]
fantastic = "core.cli:main"

[tool.setuptools]
packages = ["core", "core.tools", "core.server", "core.ai"]

[tool.setuptools.package-dir]
core = "."

[tool.setuptools.package-data]
core = ["_bundled/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
