[project]
name = "fantastic-integration-tests"
version = "0.0.0"
description = "Cross-runtime integration tests for the Fantastic protocol — spawns Python + Swift kernels as subprocesses, pairs them via kernel_bridge, exercises send/reflect/streams across the wire. Python orchestrator for fast iteration."
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "websockets>=12.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
