[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-kernel"
version = "0.1.0"
description = "Fantastic kernel — agents, send, filesystem registry. Plugin-discovered bundles via fantastic.bundles entry points."
license = "Apache-2.0"
license-files = ["../LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "fantastic-cli",
  "fantastic-web",
  "fantastic-web-ws",
  "fantastic-web-rest",
  "fantastic-scheduler",
  "fantastic-file",
  "fantastic-yaml-state",
  "fantastic-fs-loader",
  "fantastic-terminal-backend",
  "fantastic-ollama-backend",
  "fantastic-nvidia-nim-backend",
  "fantastic-anthropic-backend",
  "fantastic-python-runtime",
  "fantastic-kernel-bridge",
  "fantastic-ssh-runner",
  "fantastic-local-runner",
]

[project.scripts]
fantastic = "main:main_dispatch"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "kernel"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-xdist>=3.6",
  "pytest-cov>=5",
  "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
  "bundled_agents/cli/tests",
  "bundled_agents/web/host/tests",
  "bundled_agents/web/web_ws/tests",
  "bundled_agents/web/web_rest/tests",
  "bundled_agents/scheduler/tests",
  "bundled_agents/file/tests",
  "bundled_agents/yaml_state/tests",
  "bundled_agents/loader/fs_loader/tests",
  "bundled_agents/terminal/tests",
  "bundled_agents/ai/ollama/ollama_backend/tests",
  "bundled_agents/ai/nvidia/nvidia_nim_backend/tests",
  "bundled_agents/kernel_bridge/tests",
  "bundled_agents/runner/ssh_runner/tests",
  "bundled_agents/runner/local_runner/tests",
  "bundled_agents/python_runtime/tests",
]
addopts = "-q"

[tool.uv.workspace]
members = [
  "bundled_agents/cli",
  "bundled_agents/web/host",
  "bundled_agents/web/web_ws",
  "bundled_agents/web/web_rest",
  "bundled_agents/scheduler",
  "bundled_agents/file",
  "bundled_agents/terminal",
  "bundled_agents/ai/ollama/ollama_backend",
  "bundled_agents/ai/nvidia/nvidia_nim_backend",
  "bundled_agents/ai/anthropic/anthropic_backend",
  "bundled_agents/kernel_bridge",
  "bundled_agents/runner/ssh_runner",
  "bundled_agents/runner/local_runner",
  "bundled_agents/python_runtime",
  "bundled_agents/yaml_state",
  "bundled_agents/loader/fs_loader",
  "installed_agents/*",
]

[tool.uv.sources]
fantastic-cli = { workspace = true }
fantastic-web = { workspace = true }
fantastic-web-ws = { workspace = true }
fantastic-web-rest = { workspace = true }
fantastic-scheduler = { workspace = true }
fantastic-file = { workspace = true }
fantastic-yaml-state = { workspace = true }
fantastic-terminal-backend = { workspace = true }
fantastic-ollama-backend = { workspace = true }
fantastic-nvidia-nim-backend = { workspace = true }
fantastic-anthropic-backend = { workspace = true }
fantastic-kernel-bridge = { workspace = true }
fantastic-ssh-runner = { workspace = true }
fantastic-local-runner = { workspace = true }
fantastic-python-runtime = { workspace = true }
fantastic-fs-loader = { workspace = true }
