[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-cli"
version = "0.1.0"
description = "Fantastic cli agent — terminal renderer (token/done/say/error)."
requires-python = ">=3.11"
dependencies = []

[project.entry-points."fantastic.bundles"]
cli = "cli.tools"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
