[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-file"
version = "0.1.0"
description = "Fantastic file agent — filesystem root with read/write/list/etc."
requires-python = ">=3.11"
dependencies = []

[project.entry-points."fantastic.bundles"]
file = "file.tools"

[tool.hatch.build.targets.wheel]
packages = ["src/file"]
