[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-scheduler"
version = "0.1.0"
description = "Fantastic scheduler — recurring tasks with persisted history."
requires-python = ">=3.11"
dependencies = []

[project.entry-points."fantastic.bundles"]
scheduler = "scheduler.tools"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]
