[package]
name = "fantastic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `fantastic` binary — composes the kernel + default bundle set."

[[bin]]
name = "fantastic"
path = "src/main.rs"

[dependencies]
fantastic-kernel = { path = "../fantastic-kernel" }
fantastic-core = { path = "../bundles/fantastic-core" }
fantastic-cli-bundle = { path = "../bundles/fantastic-cli-bundle" }
fantastic-file = { path = "../bundles/fantastic-file" }
fantastic-web = { path = "../bundles/fantastic-web" }
fantastic-web-ws = { path = "../bundles/fantastic-web-ws" }
fantastic-web-rest = { path = "../bundles/fantastic-web-rest" }
fantastic-html-agent = { path = "../bundles/fantastic-html-agent" }
fantastic-canvas-backend = { path = "../bundles/fantastic-canvas-backend" }
fantastic-canvas-webapp = { path = "../bundles/fantastic-canvas-webapp" }
fantastic-scheduler = { path = "../bundles/fantastic-scheduler" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[features]
# Default for the standalone CLI binary is the full tier — it runs on
# Linux servers, macOS Pro builds, CI runners, and any unsandboxed
# host. Future bundles that need subprocess support (terminal-backend,
# python-runtime equivalents, ssh-runner, local-runner) gate to this
# feature; the `embedded` build excludes them at compile time.
default = ["full"]

# Full tier — no sandbox constraints. Subprocess-spawning bundles are
# allowed. Server, CLI, macOS Pro app.
full = []

# Sandboxed / embedded-library tier — must compile clean for iOS /
# iPadOS / visionOS / macOS Lite (App Sandbox). Compile-time
# guarantee: no `std::process`, no `fork`, no dynamic library loading.
# Building the CLI under this feature is unusual but supported (e.g.
# an iOS-tier dev binary that refuses to register full-tier bundles).
embedded = []

[dev-dependencies]
tempfile = "3"
