[package]
name = "fantastic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `fantastic` binary — composes the kernel + default bundle set."

[[bin]]
name = "fantastic"
path = "src/main.rs"

[dependencies]
fantastic-kernel = { path = "../fantastic-kernel" }
fantastic-core = { path = "../bundles/fantastic-core" }
fantastic-cli-bundle = { path = "../bundles/fantastic-cli-bundle" }
fantastic-file = { path = "../bundles/fantastic-file" }
fantastic-web = { path = "../bundles/fantastic-web" }
fantastic-web-ws = { path = "../bundles/fantastic-web-ws" }
fantastic-web-rest = { path = "../bundles/fantastic-web-rest" }
fantastic-html-agent = { path = "../bundles/fantastic-html-agent" }
fantastic-canvas-backend = { path = "../bundles/fantastic-canvas-backend" }
fantastic-canvas-webapp = { path = "../bundles/fantastic-canvas-webapp" }
fantastic-scheduler = { path = "../bundles/fantastic-scheduler" }
fantastic-gl-agent = { path = "../bundles/fantastic-gl-agent" }
fantastic-telemetry-pane = { path = "../bundles/fantastic-telemetry-pane" }
fantastic-ai-chat-webapp = { path = "../bundles/fantastic-ai-chat-webapp" }
fantastic-terminal-webapp = { path = "../bundles/fantastic-terminal-webapp" }
fantastic-ollama-backend = { path = "../bundles/fantastic-ollama-backend" }
fantastic-kernel-bridge = { path = "../bundles/fantastic-kernel-bridge" }
fantastic-nvidia-nim-backend = { path = "../bundles/fantastic-nvidia-nim-backend" }
# Full-tier-only bundles — subprocess-using; only compiled into the
# `full` feature build. iOS embedded slice MUST NOT pull them in.
fantastic-terminal-backend = { path = "../bundles/fantastic-terminal-backend", optional = true }
fantastic-python-runtime = { path = "../bundles/fantastic-python-runtime", optional = true }
fantastic-local-runner = { path = "../bundles/fantastic-local-runner", optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[features]
# Default for the standalone CLI binary is the full tier — it runs on
# Linux servers, macOS Pro builds, CI runners, and any unsandboxed
# host. Subprocess-spawning bundles (terminal_backend, python_runtime,
# local_runner, future ssh_runner) gate to this feature; the `embedded`
# build excludes them at compile time.
default = ["full"]

# Full tier — no sandbox constraints. Subprocess-spawning bundles are
# allowed. Server, CLI, macOS Pro app.
full = [
    "dep:fantastic-terminal-backend",
    "dep:fantastic-python-runtime",
    "dep:fantastic-local-runner",
]

# Sandboxed / embedded-library tier — must compile clean for iOS /
# iPadOS / visionOS / macOS Lite (App Sandbox). Compile-time
# guarantee: no `std::process`, no `fork`, no dynamic library loading.
# Building the CLI under this feature is unusual but supported (e.g.
# an iOS-tier dev binary that refuses to register full-tier bundles).
embedded = []

[dev-dependencies]
tempfile = "3"
