[package]
name = "fantastic-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Recursive Agent substrate + Kernel shared context for the fantastic_canvas medium."

[dependencies]
fantastic-bundle = { path = "../fantastic-bundle" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
