[package]
name = "fantastic-uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI-bound Swift surface for embedding the kernel in iOS/macOS apps."

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "fantastic_uniffi"

[dependencies]
fantastic-kernel = { path = "../fantastic-kernel" }
fantastic-core = { path = "../bundles/fantastic-core" }
fantastic-file = { path = "../bundles/fantastic-file" }
fantastic-web = { path = "../bundles/fantastic-web" }
fantastic-web-ws = { path = "../bundles/fantastic-web-ws" }
fantastic-web-rest = { path = "../bundles/fantastic-web-rest" }
fantastic-html-agent = { path = "../bundles/fantastic-html-agent" }
fantastic-canvas-backend = { path = "../bundles/fantastic-canvas-backend" }
fantastic-canvas-webapp = { path = "../bundles/fantastic-canvas-webapp" }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { version = "0.29", features = ["tokio"] }
once_cell = "1"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[features]
default = []
