[package]
name = "fantastic-uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI-bound Swift surface for embedding the kernel in iOS/macOS apps."

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "fantastic_uniffi"

[dependencies]
fantastic-kernel = { path = "../fantastic-kernel" }
fantastic-core = { path = "../bundles/fantastic-core" }
fantastic-file = { path = "../bundles/fantastic-file" }
fantastic-web = { path = "../bundles/fantastic-web" }
fantastic-web-ws = { path = "../bundles/fantastic-web-ws" }
fantastic-web-rest = { path = "../bundles/fantastic-web-rest" }
fantastic-html-agent = { path = "../bundles/fantastic-html-agent" }
fantastic-canvas-backend = { path = "../bundles/fantastic-canvas-backend" }
fantastic-canvas-webapp = { path = "../bundles/fantastic-canvas-webapp" }
fantastic-scheduler = { path = "../bundles/fantastic-scheduler" }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { version = "0.29", features = ["tokio"] }
once_cell = "1"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
# Default for the Swift-embedded build is the sandboxed tier — that's
# what FantasticLite (iOS/iPadOS/visionOS/macOS Lite) needs. The
# embedded build MUST compile without subprocess-using bundles. The
# `full` feature exists for parity with the CLI crate so the same
# UniFFI library can be linked into an unsandboxed host that wants
# the full bundle set; today no bundle differs between the two.
default = ["embedded"]

# Sandboxed / embedded-library tier — compile-time guarantee no
# `std::process`, no `fork`, no dynamic library loading.
embedded = []

# Full tier — same shape as the CLI's `full` feature.
full = []
