[package]
publish = false
name = "fantastic-uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI-bound Swift surface for embedding the kernel in iOS/macOS apps."

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "fantastic_uniffi"

[dependencies]
fantastic-kernel = { path = "../fantastic-kernel" }
fantastic-core = { path = "../bundles/fantastic-core" }
fantastic-file = { path = "../bundles/fantastic-file" }
fantastic-web = { path = "../bundles/fantastic-web" }
fantastic-web-ws = { path = "../bundles/fantastic-web-ws" }
fantastic-web-rest = { path = "../bundles/fantastic-web-rest" }
fantastic-html-agent = { path = "../bundles/fantastic-html-agent" }
fantastic-canvas-backend = { path = "../bundles/fantastic-canvas-backend" }
fantastic-canvas-webapp = { path = "../bundles/fantastic-canvas-webapp" }
fantastic-scheduler = { path = "../bundles/fantastic-scheduler" }
fantastic-gl-agent = { path = "../bundles/fantastic-gl-agent" }
fantastic-telemetry-pane = { path = "../bundles/fantastic-telemetry-pane" }
fantastic-ai-chat-webapp = { path = "../bundles/fantastic-ai-chat-webapp" }
fantastic-terminal-webapp = { path = "../bundles/fantastic-terminal-webapp" }
fantastic-ollama-backend = { path = "../bundles/fantastic-ollama-backend" }
fantastic-kernel-bridge = { path = "../bundles/fantastic-kernel-bridge" }
fantastic-nvidia-nim-backend = { path = "../bundles/fantastic-nvidia-nim-backend" }
fantastic-proxy-agent = { path = "../bundles/fantastic-proxy-agent" }
fantastic-tools = { path = "../bundles/fantastic-tools" }

# Full-tier (desktop / unsandboxed) bundles. Optional so they only link
# into the `full` build (Pro Mac). Sandboxed iOS / Lite builds compile
# WITHOUT these — they use PTY / subprocess / dynamic loading and would
# crash at runtime in an iOS sandbox.
fantastic-terminal-backend = { path = "../bundles/fantastic-terminal-backend", optional = true }
fantastic-local-runner = { path = "../bundles/fantastic-local-runner", optional = true }
fantastic-python-runtime = { path = "../bundles/fantastic-python-runtime", optional = true }
fantastic-ssh-runner = { path = "../bundles/fantastic-ssh-runner", optional = true }

tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uniffi = { version = "0.29", features = ["tokio"] }

# Apple-only bundle. Linked into the XCFramework only on macOS / iOS
# targets. Linux / Windows builds skip it entirely.
[target.'cfg(target_vendor = "apple")'.dependencies]
fantastic-foundation-models-backend = { path = "../bundles/fantastic-foundation-models-backend" }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
# Default for the Swift-embedded build is the sandboxed tier — that's
# what FantasticLite (iOS/iPadOS/visionOS/macOS Lite) needs. The
# embedded build MUST compile without subprocess-using bundles. The
# `full` feature exists for parity with the CLI crate so the same
# UniFFI library can be linked into an unsandboxed host that wants
# the full bundle set; today no bundle differs between the two.
default = ["embedded"]

# Sandboxed / embedded-library tier — compile-time guarantee no
# `std::process`, no `fork`, no dynamic library loading.
embedded = []

# Full tier — desktop / unsandboxed (Pro Mac). Enables every PTY- and
# subprocess-using bundle. Same set the CLI ships.
full = [
    "fantastic-terminal-backend",
    "fantastic-local-runner",
    "fantastic-python-runtime",
    "fantastic-ssh-runner",
]
