[package]
name = "uniffi-bindgen"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local re-export of uniffi's bindings generator CLI, pinned to our uniffi version."

# This crate exists ONLY to produce a `uniffi-bindgen` binary at the
# exact uniffi version our workspace uses. The upstream `uniffi-bindgen-cli`
# package isn't published to crates.io; the recommended path for the
# 0.29.x line is a tiny workspace member that calls `uniffi::uniffi_bindgen_main()`.
# Then `cargo install --path rust/crates/uniffi-bindgen --locked` (or
# `cargo run --bin uniffi-bindgen --`) puts the binary on PATH for
# `scripts/build-xcframework.sh`.

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
# `cli` feature enables the bindings-generator entry point used below.
uniffi = { version = "0.29", features = ["cli"] }
