[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantastic-kernel"
version = "0.1.0"
description = "Fantastic kernel — agents, send, filesystem registry. Plugin-discovered bundles via fantastic.bundles entry points."
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
  "fantastic-cli",
  "fantastic-web",
  "fantastic-web-ws",
  "fantastic-web-rest",
  "fantastic-scheduler",
  "fantastic-file-bridge",
  "fantastic-yaml-state",
  "fantastic-kernel-state",
  "fantastic-terminal-backend",
  "fantastic-ollama-backend",
  "fantastic-nvidia-nim-backend",
  "fantastic-anthropic-backend",
  "fantastic-python-runtime",
  "fantastic-io-bridge",
  "fantastic-ws-bridge",
  "fantastic-relay-connector",
  "fantastic-ssh-runner",
  "fantastic-local-runner",
  "fantastic-runner-core",
  "fantastic-ai-core",
]

[project.scripts]
fantastic_kernel = "main:main_dispatch"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "kernel"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-xdist>=3.6",
  "pytest-cov>=5",
  "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
  "bundled_agents/cli/tests",
  "bundled_agents/web/host/tests",
  "bundled_agents/io/web_ws/tests",
  "bundled_agents/io/web_rest/tests",
  "bundled_agents/scheduler/tests",
  "bundled_agents/io/file_bridge/tests",
  "bundled_agents/yaml_state/tests",
  "bundled_agents/loader/kernel_state/tests",
  "bundled_agents/terminal/tests",
  "bundled_agents/ai/ollama/ollama_backend/tests",
  "bundled_agents/ai/nvidia/nvidia_nim_backend/tests",
  "bundled_agents/io/io_bridge/tests",
  "bundled_agents/io/ws_bridge/tests",
  "bundled_agents/io/relay_connector/tests",
  "bundled_agents/runner/ssh_runner/tests",
  "bundled_agents/runner/local_runner/tests",
  "bundled_agents/python_runtime/tests",
]
addopts = "-q"

[tool.uv.workspace]
members = [
  "bundled_agents/cli",
  "bundled_agents/web/host",
  "bundled_agents/io/web_ws",
  "bundled_agents/io/web_rest",
  "bundled_agents/scheduler",
  "bundled_agents/io/file_bridge",
  "bundled_agents/terminal",
  "bundled_agents/ai/ai_core",
  "bundled_agents/ai/ollama/ollama_backend",
  "bundled_agents/ai/nvidia/nvidia_nim_backend",
  "bundled_agents/ai/anthropic/anthropic_backend",
  "bundled_agents/io/io_bridge",
  "bundled_agents/io/ws_bridge",
  "bundled_agents/io/relay_connector",
  "bundled_agents/runner/ssh_runner",
  "bundled_agents/runner/local_runner",
  "bundled_agents/runner/runner_core",
  "bundled_agents/python_runtime",
  "bundled_agents/yaml_state",
  "bundled_agents/loader/kernel_state",
  "installed_agents/*",
]

[tool.uv.sources]
fantastic-cli = { workspace = true }
fantastic-web = { workspace = true }
fantastic-web-ws = { workspace = true }
fantastic-web-rest = { workspace = true }
fantastic-scheduler = { workspace = true }
fantastic-file-bridge = { workspace = true }
fantastic-yaml-state = { workspace = true }
fantastic-terminal-backend = { workspace = true }
fantastic-ollama-backend = { workspace = true }
fantastic-nvidia-nim-backend = { workspace = true }
fantastic-anthropic-backend = { workspace = true }
fantastic-io-bridge = { workspace = true }
fantastic-ws-bridge = { workspace = true }
fantastic-relay-connector = { workspace = true }
fantastic-ssh-runner = { workspace = true }
fantastic-local-runner = { workspace = true }
fantastic-runner-core = { workspace = true }
fantastic-ai-core = { workspace = true }
fantastic-python-runtime = { workspace = true }
fantastic-kernel-state = { workspace = true }
